Fixed incorrect spacing for real all button

--- a/themes/src/Fluent.css
+++ b/themes/src/Fluent.css
@@ -206,7 +206,6 @@
 }
 .theme-dark .vc-ranb-button.button__201d5.lookBlank__201d5.sizeMin__201d5.grow__201d5{
   padding: 0;
-  margin: 0 5px;
   color: #000;
 }
 .theme-dark .button__201d5.lookFilled__201d5.colorBrand__201d5, .theme-dark .button__201d5.lookFilled__201d5.colorGreen__201d5, .theme-dark .button__201d5.lookFilled__201d5.colorBrandNew__8872c {
